--- a/ribuzz/package.json
+++ b/ribuzz/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@material-tailwind/react": "^2.1.9",
+    "formik": "^2.4.6",
     "next": "14.2.5",
+    "next-cloudinary": "^6.10.0",
+    "@material-tailwind/react": "^2.1.9",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.3.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
