--- a/ribuzz/package.json
+++ b/ribuzz/package.json
@@ -13,6 +13,7 @@
     "formik": "^2.4.6",
     "next": "14.2.5",
     "next-cloudinary": "^6.10.0",
+    "next-video": "^1.1.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
