--- a/ribuzz/package.json
+++ b/ribuzz/package.json
@@ -11,13 +11,14 @@
   "dependencies": {
     "@material-tailwind/react": "^2.1.9",
     "formik": "^2.4.6",
-    "next": "14.2.5",
+    "next": "^14.2.6",
     "next-cloudinary": "^6.10.0",
     "next-video": "^1.1.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-swipeable": "^7.0.1",
+    "sweetalert2": "^11.12.4",
     "yup": "^1.4.0"
   },
   "devDependencies": {
