--- a/ribuzz/package.json
+++ b/ribuzz/package.json
@@ -3,25 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.9",
+    "@stripe/react-stripe-js": "^2.8.0",
+    "@stripe/stripe-js": "^4.4.0",
+    "axios": "^1.7.7",
     "formik": "^2.4.6",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "next": "^14.2.6",
+    "next-auth": "^4.24.7",
     "next-cloudinary": "^6.10.0",
     "next-video": "^1.1.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-swipeable": "^7.0.1",
+    "react-toastify": "^10.0.5",
     "sweetalert2": "^11.12.4",
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/jwt-decode": "^3.1.0",
+    "@types/lodash": "^4.17.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
