--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@stripe/stripe-js": "^4.4.0",
     "axios": "^1.7.7",
     "formik": "^2.4.6",
+    "http-proxy-middleware": "^3.0.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
