--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@stripe/react-stripe-js": "^2.8.0",
     "@stripe/stripe-js": "^4.4.0",
     "axios": "^1.7.7",
+    "flowbite": "^2.5.1",
+    "flowbite-react": "^0.10.1",
     "formik": "^2.4.6",
     "http-proxy-middleware": "^3.0.1",
     "jsonwebtoken": "^9.0.2",
@@ -24,6 +26,7 @@
     "next-cloudinary": "^6.11.0",
     "next-video": "^1.1.4",
     "react": "^18",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-swipeable": "^7.0.1",
