--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.13.0",
+    "@cloudinary/url-gen": "^1.20.0",
     "@material-tailwind/react": "^2.1.9",
     "@react-oauth/google": "^0.12.1",
     "@stripe/react-stripe-js": "^2.8.0",
