--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@cloudinary/react": "^1.13.0",
     "@cloudinary/url-gen": "^1.20.0",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
     "@material-tailwind/react": "^2.1.9",
     "@react-oauth/google": "^0.12.1",
     "@stripe/react-stripe-js": "^2.8.0",
