--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "http-proxy-middleware": "^3.0.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "next": "^14.2.6",
     "next-auth": "^4.24.7",
