--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@stripe/stripe-js": "^4.4.0",
     "@types/google.maps": "^3.58.0",
     "axios": "^1.7.7",
+    "cloudinary": "^2.4.0",
     "flowbite": "^2.5.1",
     "flowbite-react": "^0.10.1",
     "formik": "^2.4.6",
