--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "flowbite-react": "^0.10.1",
     "formik": "^2.4.6",
     "http-proxy-middleware": "^3.0.1",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
@@ -46,6 +47,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/jwt-decode": "^3.1.0",
     "@types/leaflet": "^1.9.12",
     "@types/lodash": "^4.17.7",
